--- a/document.html
+++ b/document.html
@@ -434,6 +434,120 @@
                             </div>
                         </div>
                     </div>
+
+ <!-- Collapsable Card Example -->
+ <div class="card shadow mb-4">
+    <!-- Card Header - Accordion -->
+    <a href="#collapseCardExample4" class="d-block card-header py-3 collapsed"
+        data-toggle="collapse" role="button" aria-expanded="false"
+        aria-controls="collapseCardExample4">
+        <h6 class="m-0 font-weight-bold text-primary text-center">CONTROL DE ACCESO Y SEGURIDAD</h6>
+        <div class="progress">
+            <div class="progress-bar bg-info" role="progressbar" style="width: 20%"
+                aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+    </a>
+    <!-- Card Content - Collapse -->
+    <div class="collapse" id="collapseCardExample4">
+        <div class="card-body">
+            This is a collapsable card example using Bootstrap's built in collapse
+            functionality. <strong>Click on the card header</strong> to see the card body
+            collapse and expand!
+        </div>
+    </div>
+</div>
+
+
+<!-- Collapsable Card Example -->
+<div class="card shadow mb-4">
+    <!-- Card Header - Accordion -->
+    <a href="#collapseCardExample5" class="d-block card-header py-3 collapsed"
+        data-toggle="collapse" role="button" aria-expanded="false"
+        aria-controls="collapseCardExample5">
+        <h6 class="m-0 font-weight-bold text-primary text-center">SOPORTE TÉCNICO Y GARANTIA</h6>
+        <div class="progress">
+            <div class="progress-bar bg-info" role="progressbar" style="width: 20%"
+                aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+    </a>
+    <!-- Card Content - Collapse -->
+    <div class="collapse" id="collapseCardExample5">
+        <div class="card-body">
+            This is a collapsable card example using Bootstrap's built in collapse
+            functionality. <strong>Click on the card header</strong> to see the card body
+            collapse and expand!
+        </div>
+    </div>
+</div>
+
+
+<!-- Collapsable Card Example -->
+<div class="card shadow mb-4">
+    <!-- Card Header - Accordion -->
+    <a href="#collapseCardExample6" class="d-block card-header py-3 collapsed"
+        data-toggle="collapse" role="button" aria-expanded="false"
+        aria-controls="collapseCardExample6">
+        <h6 class="m-0 font-weight-bold text-primary text-center">PRUEBAS DE ACEPTACIÓN (ATPs)</h6>
+        <div class="progress">
+            <div class="progress-bar bg-info" role="progressbar" style="width: 20%"
+                aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+    </a>
+    <!-- Card Content - Collapse -->
+    <div class="collapse" id="collapseCardExample6">
+        <div class="card-body">
+            This is a collapsable card example using Bootstrap's built in collapse
+            functionality. <strong>Click on the card header</strong> to see the card body
+            collapse and expand!
+        </div>
+    </div>
+</div>
+
+<!-- Collapsable Card Example -->
+<div class="card shadow mb-4">
+    <!-- Card Header - Accordion -->
+    <a href="#collapseCardExample7" class="d-block card-header py-3 collapsed"
+        data-toggle="collapse" role="button" aria-expanded="false"
+        aria-controls="collapseCardExample7">
+        <h6 class="m-0 font-weight-bold text-primary text-center">CAPACITACIÓN</h6>
+        <div class="progress">
+            <div class="progress-bar bg-info" role="progressbar" style="width: 20%"
+                aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+    </a>
+    <!-- Card Content - Collapse -->
+    <div class="collapse" id="collapseCardExample7">
+        <div class="card-body">
+            This is a collapsable card example using Bootstrap's built in collapse
+            functionality. <strong>Click on the card header</strong> to see the card body
+            collapse and expand!
+        </div>
+    </div>
+</div>
+
+<!-- Collapsable Card Example -->
+<div class="card shadow mb-4">
+    <!-- Card Header - Accordion -->
+    <a href="#collapseCardExample8" class="d-block card-header py-3 collapsed"
+        data-toggle="collapse" role="button" aria-expanded="false"
+        aria-controls="collapseCardExample8">
+        <h6 class="m-0 font-weight-bold text-primary text-center">MANUALES Y DOCUMENTOS</h6>
+        <div class="progress">
+            <div class="progress-bar bg-info" role="progressbar" style="width: 20%"
+                aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+    </a>
+    <!-- Card Content - Collapse -->
+    <div class="collapse" id="collapseCardExample8">
+        <div class="card-body">
+            This is a collapsable card example using Bootstrap's built in collapse
+            functionality. <strong>Click on the card header</strong> to see the card body
+            collapse and expand!
+        </div>
+    </div>
+</div>
+
+
                 </div>
                 <!-- End of Main Content -->
 
