--- a/index.html
+++ b/index.html
@@ -365,8 +365,9 @@
                     <!-- Page Heading -->
                     <div class="d-sm-flex align-items-center justify-content-between mb-4">
                         <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
-                        <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
-                                class="fas fa-download fa-sm text-white-50"></i> Generate Report</a>
+                        <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"
+                            data-toggle="modal" data-target="#popGenerar">
+                            <i class="fas fa-file-upload"></i> Generar Documento</a>
                     </div>
 
                     <!-- Content Row -->
@@ -512,6 +513,7 @@
                                                     <th>#</th>
                                                     <th>Proyecto</th>
                                                     <th>Tipo de F62</th>
+                                                    <th>Responsable</th>
                                                     <th>Fecha de Inicio</th>
                                                     <th>Fecha de Cierre</th>
                                                     <th>Status</th>
@@ -523,6 +525,7 @@
                                                     <th>#</th>
                                                     <th>Proyecto</th>
                                                     <th>Tipo de F62</th>
+                                                    <th>Responsable</th>
                                                     <th>Fecha de Inicio</th>
                                                     <th>Fecha de Cierre</th>
                                                     <th>Status</th>
@@ -534,6 +537,7 @@
                                                     <td>1</td>
                                                     <td>ADM TELCEL</td>
                                                     <td>Infraestructura</td>
+                                                    <td>Jordan Carlos Muñoz Rueda</td>
                                                     <td>23/02/2024</td>
                                                     <td>07/03/2024</td>
                                                     <td><i class="fas fa-circle text-primary"></i> Progress</td>
@@ -555,6 +559,7 @@
                                                     <td>2</td>
                                                     <td>Generic IBM</td>
                                                     <td>Aplicación</td>
+                                                    <td></td>
                                                     <td>23/01/2024</td>
                                                     <td>04/01/2024</td>
                                                     <td><i class="fas fa-circle text-secundary"></i> Backlog</td>
@@ -574,6 +579,7 @@
                                                     <td>3</td>
                                                     <td>Ashton Cox</td>
                                                     <td>Slim</td>
+                                                    <td></td>
                                                     <td>23/01/2024</td>
                                                     <td>04/01/2024</td>
                                                     <td><i class="fas fa-circle text-secundary"></i> Backlog</td>
@@ -593,6 +599,7 @@
                                                     <td>4</td>
                                                     <td>Cedric Kelly</td>
                                                     <td>Infraestructura</td>
+                                                    <td></td>
                                                     <td>23/01/2024</td>
                                                     <td>04/01/2024</td>
                                                     <td><i class="fas fa-circle text-primary"></i> Progress</td>
@@ -612,6 +619,7 @@
                                                     <td>5</td>
                                                     <td>Airi Satou</td>
                                                     <td>Infraestructura</td>
+                                                    <td></td>
                                                     <td>23/01/2024</td>
                                                     <td>04/01/2024</td>
                                                     <td><i class="fas fa-circle text-primary"></i> Progress</td>
@@ -631,6 +639,7 @@
                                                     <td>6</td>
                                                     <td>Brielle Williamson</td>
                                                     <td>Slim</td>
+                                                    <td></td>
                                                     <td>23/01/2024</td>
                                                     <td>04/01/2024</td>
                                                     <td><i class="fas fa-circle text-primary"></i> Progress</td>
@@ -650,6 +659,7 @@
                                                     <td>7</td>
                                                     <td>Herrod Chandler</td>
                                                     <td>Aplicación</td>
+                                                    <td></td>
                                                     <td>23/01/2024</td>
                                                     <td>04/01/2024</td>
                                                     <td><i class="fas fa-circle text-success"></i> Close</td>
@@ -660,7 +670,7 @@
                                                         <a href="#" class="btn btn-primary btn-circle btn-sm">
                                                             <i class="fas fa-info-circle"></i>
                                                         </a>
-                                                        <a href="" class="btn btn-danger btn-circle btn-sm">
+                                                        <a href="#" class="btn btn-danger btn-circle btn-sm">
                                                             <i class="fas fa-file-download"></i>
                                                         </a>
                                                     </td>
@@ -669,6 +679,7 @@
                                                     <td>8</td>
                                                     <td>Rhona Davidson</td>
                                                     <td>Aplicación</td>
+                                                    <td></td>
                                                     <td>23/01/2024</td>
                                                     <td>04/01/2024</td>
                                                     <td><i class="fas fa-circle text-success"></i> Close</td>
@@ -685,6 +696,7 @@
                                                     <td>9</td>
                                                     <td>Colleen Hurst</td>
                                                     <td>Slim</td>
+                                                    <td></td>
                                                     <td>23/01/2024</td>
                                                     <td>04/01/2024</td>
                                                     <td><i class="fas fa-circle text-success"></i> Close</td>
@@ -701,6 +713,7 @@
                                                     <td>10</td>
                                                     <td>Sonya Frost</td>
                                                     <td>Infraestructura</td>
+                                                    <td></td>
                                                     <td>23/01/2024</td>
                                                     <td>04/01/2024</td>
                                                     <td><i class="fas fa-circle text-success"></i> Close</td>
@@ -717,6 +730,7 @@
                                                     <td>11</td>
                                                     <td>Fiona Green</td>
                                                     <td>Slim</td>
+                                                    <td></td>
                                                     <td>23/01/2024</td>
                                                     <td>04/01/2024</td>
                                                     <td><i class="fas fa-circle text-danger"></i> Cancel</td>
@@ -830,6 +844,116 @@
         </div>
     </div>
 
+    <!-- Modal para Generar documentos -->
+    <div class="modal fade" id="popGenerar" data-backdrop="static" data-keyboard="false" tabindex="-1"
+        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog modal-xl modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <form action="">
+                    <div class="modal-body row">
+
+                        <div class="col-lg-12 container-fluid" style="margin-top: 1%;">
+                            <h5 class="modal-title font-weight-bold text-primary" id="staticBackdropLabel">NUEVO
+                                DOCUMENTO
+                            </h5>
+                        </div>
+                        <div class="container-fluid col-lg-6" style="margin-top: 3%; margin-bottom: 3%;">
+                            <div class="col-lg-12" style="padding-bottom: 4%;">
+                                <label for="">Nombre del Proyecto:</label>
+                                <div class="input-group flex-nowrap">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" id="addon-wrapping"><i
+                                                class="fab fa-amilia"></i></span>
+                                    </div>
+                                    <input type="text" class="form-control" placeholder="" aria-label=""
+                                        aria-describedby="addon-wrapping">
+                                </div>
+                            </div>
+                            <div class="col-lg-12" style="padding-bottom: 4%;">
+                                <label for="">Folio PE (Portafolio Empresarial):</label>
+                                <div class="input-group flex-nowrap">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" id="addon-wrapping"><i
+                                                class="fas fa-briefcase"></i></span>
+                                    </div>
+                                    <input type="text" class="form-control" placeholder="(Opcional)" aria-label=""
+                                        aria-describedby="addon-wrapping">
+                                </div>
+                            </div>
+                            <div class="col-lg-12">
+                                <label for="">Tipo de Documento:</label>
+                                <div class="input-group flex-nowrap">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" id="addon-wrapping"><i
+                                                class="fas fa-file-alt"></i></span>
+                                    </div>
+                                    <select class="custom-select" id="inputGroupSelect01">
+                                        <option selected disabled>Selecciona...</option>
+                                        <option value="1">F62 INFRAESTRUCTURA</option>
+                                        <option value="2">F62 APLICACIÓN</option>
+                                        <option value="3">F62 SLIM</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="container-fluid col-lg-6" style="margin-top: 3%; margin-bottom: 3%;">
+                            <div class="col-lg-12" style="padding-bottom: 4%;">
+                                <label for="">Proveedor:</label>
+                                <div class="input-group flex-nowrap">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" id="addon-wrapping"><i
+                                                class="fas fa-user-tie"></i></span>
+                                    </div>
+                                    <select class="custom-select" id="inputGroupSelect01">
+                                        <option selected disabled>Selecciona...</option>
+                                        <option value="1">HUAWEI</option>
+                                        <option value="2">RED HAT</option>
+                                        <option value="3">MICROSOFT</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="col-lg-12" style="padding-bottom: 4%;">
+                                <label for="">Idioma:</label>
+                                <div class="input-group flex-nowrap">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" id="addon-wrapping"><i
+                                                class="fas fa-language"></i></span>
+                                    </div>
+                                    <select class="custom-select" id="inputGroupSelect01">
+                                        <option selected disabled>Selecciona...</option>
+                                        <option value="1">ESPAÑOL</option>
+                                        <option value="2">INGLES</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="col-lg-12">
+                                <label for="">Fecha aproximada de cierre:</label>
+                                <div class="input-group flex-nowrap">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" id="addon-wrapping"><i
+                                                class="fas fa-calendar-alt"></i></span>
+                                    </div>
+                                    <input class="form-control" type="date" id="fecha" name="fecha">
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </form>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Understood</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Modal -->
     <div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1"
         aria-labelledby="staticBackdropLabel" aria-hidden="true">
@@ -848,14 +972,14 @@
                                 data-target="#collapseExample" aria-expanded="false"
                                 aria-controls="collapseExample">LLENADO DE DOCUMENTO</a>
                             <a class="list-group-item list-group-item-action" data-toggle="collapse"
-                            data-target="#collapseExample1" aria-expanded="false"
-                            aria-controls="collapseExample1">Item 2</a>
-                            <a class="list-group-item list-group-item-action"data-toggle="collapse"
-                            data-target="#collapseExample2" aria-expanded="false"
-                            aria-controls="collapseExample2">Item 3</a>
+                                data-target="#collapseExample1" aria-expanded="false"
+                                aria-controls="collapseExample1">Item 2</a>
                             <a class="list-group-item list-group-item-action" data-toggle="collapse"
-                            data-target="#collapseExample3" aria-expanded="false"
-                            aria-controls="collapseExample3">Item 4</a>
+                                data-target="#collapseExample2" aria-expanded="false"
+                                aria-controls="collapseExample2">Item 3</a>
+                            <a class="list-group-item list-group-item-action" data-toggle="collapse"
+                                data-target="#collapseExample3" aria-expanded="false"
+                                aria-controls="collapseExample3">Item 4</a>
                         </div>
                         <div class="col-xl-10 col-md-6 container-fluid">
                             <div class="collapse show" id="collapseExample">
